lib/translator/test/fixtures/ok/raw/elseif.prg
PROGRAM elseifs
BEGIN
    IF (false)
        0
    ELSEIF (false)
        1
    ELSEIF (true)
        2
    END

    IF (false)
        3
    ELSEIF (false)
        4
    ELSE
        5
    END
END
