lib/translator/test/fixtures/error/raw/if-datatype.prg
PROGRAM if_datatype_error
BEGIN
    IF (0) END
END
